crates/clinker-exec/tests/snapshots/combine_test__tests__lookup_baseline_enrichment_high_priority.snap
---
source: crates/clinker-exec/tests/combine_test.rs
expression: canonicalize_csv(high)
---
order_id,product_code,quantity,product_name,priority
1,PROD-A,10,Widget,priority
2,PROD-B,5,Gadget,normal
4,PROD-A,3,Widget,low
