crates/clinker-exec/tests/snapshots/combine_test__tests__lookup_baseline_enrichment_standard.snap
---
source: crates/clinker-exec/tests/combine_test.rs
expression: canonicalize_csv(standard)
---
order_id,product_code,quantity,product_name,priority
3,PROD-X,1,UNKNOWN,urgent
