crates/clinker-exec/tests/snapshots/combine_test__tests__lookup_baseline_equality.snap
---
source: crates/clinker-exec/tests/combine_test.rs
expression: canonicalize_csv(result.primary_output())
---
order_id,product_name,quantity
ORD-1,Widget,5
ORD-2,Gadget,3
ORD-3,,7
