crates/clinker-exec/tests/snapshots/combine_test__tests__lookup_baseline_order_fulfillment_priority_report.snap
---
source: crates/clinker-exec/tests/combine_test.rs
expression: canonicalize_csv(priority)
---
order_id,priority_level,product_code,product_name,category,weight_kg
1,urgent,PROD-A,Widget,tools,1.5
3,high,PROD-X,,,
