crates/clinker-exec/tests/snapshots/combine_test__tests__lookup_baseline_range.snap
---
source: crates/clinker-exec/tests/combine_test.rs
expression: canonicalize_csv(result.primary_output())
---
employee_id,rate_class
E001,tier_1
E002,tier_3
E003,tier_2
